# uipath-llamaindex-python

./: Dockerfile  README.md  VENV-SETUP.md  pyproject.toml  uipath-integrations.code-workspace
.github/: dependabot.yml
.github/scripts/: detect_changed_packages.py
.github/workflows/: ci.yml  discover-packages.yml  discover-testcases.yml  integration_tests.yml  lint-custom-version.yml  lint-packages.yml  lint.yml  publish-dev.yml  publish.yml  test-custom-version.yml  test-packages.yml  test.yml
.pipelines/: security-scans.yml
docs/: human_in_the_loop.md  llms_and_embeddings.md  quick_start.md
samples/action-center-hitl-agent/: pyproject.toml
samples/calculator/: README.md  llama_index.json  main.py  pyproject.toml  uipath.json
samples/context-grounding-retriever-agent/: README.md  input.json  main.py  pyproject.toml  uipath.json
samples/deep-research/: .env.example  .flake8  .gitignore  Makefile  README.md  config.sample.json  deep_research_workflow.py  llama_index.json  main.py  pyproject.toml  uipath.json  uipath_integration.py
samples/deep-research/agents/: __init__.py  data_models.py  research_executor.py  research_planner.py  synthesis_agent.py  web_search.py
samples/deep-research/tests/: __init__.py  conftest.py
samples/deep-research/tests/e2e/: test_full_workflow.py  test_integration.py
samples/deep-research/tests/fixtures/: __init__.py  mock_llm.py  mock_query_engine.py
samples/deep-research/tests/unit/: test_deep_research_workflow.py  test_research_executor.py  test_research_planner.py  test_synthesis_agent.py  test_web_search.py
samples/generic-rag-agent/: README.md  agent.mermaid  input.json  main.py  pyproject.toml  resume.json  uipath.json
samples/generic-rag-agent/.agent/: CLI_REFERENCE.md  SDK_REFERENCE.md
samples/generic-rag-agent/sample_data/primary_data/: company_policy.txt  it_policy.txt
samples/generic-rag-agent/sample_data/secondary_data/: user_preferences.txt
samples/gym-sample/: .env.example  README.md  USAGE.md  calculator.mermaid  llama_index.json  pyproject.toml  uipath.json
samples/gym-sample/src/eval/_helpers/: coded_evaluators_helpers.py
samples/gym-sample/src/eval/coded_evaluators/: base_evaluator.py
samples/gym-sample/src/eval/legacy_evaluators/: __init__.py  evaluators.py  evaluators_helpers.py  llm_judge_types.py
samples/gym-sample/src/eval/models/: models.py
samples/gym-sample/src/gym_sample/: graph.py  run.py  tools.py  trace_utils.py  uipath_gym_types.py
samples/gym-sample/src/gym_sample/calculator/: agent.py  evals.py  test_input.json
samples/gym-sample/src/gym_sample/loan/: agent.py  evals.py  test_input.json  tools.py
samples/image-gen-agent/: pyproject.toml
samples/math-calculator-agent/: README.md  agent.mermaid  main.py  pyproject.toml  uipath.json
samples/math-calculator-agent/testcases/expected_output/: test_1_expected_output.json  test_2_expected_output.json  test_3_expected_output.json  test_4_expected_output.json  test_5_expected_output.json
samples/math-calculator-agent/testcases/input/: test_1.json  test_2.json  test_3.json  test_4.json  test_5.json
samples/multi-agent/: pyproject.toml
samples/multi-modal-book-writer-agent/: main.py  pyproject.toml
samples/pto-approval-agent/: README.md  agent.mermaid  main.py  pyproject.toml  uipath.json
samples/pto-approval-agent/testcases/expected_output/: test_1_expected_output.json  test_2_expected_output.json  test_3_expected_output.json  test_4_expected_output.json  test_5_expected_output.json
samples/pto-approval-agent/testcases/input/: test_1.json  test_1_resume.json  test_2.json  test_3.json  test_3_resume.json  test_4.json  test_4_resume.json  test_5.json  test_5_resume.json
samples/quickstart-agent/: AGENTS.md  llama_index.json  main.py  pyproject.toml  uipath.json
samples/quickstart-llamacloud/: README.md  main.py  pyproject.toml
samples/simple-hitl-agent/: entry-points.json  main.py  pyproject.toml  state.db  uipath.json
samples/simple-remote-mcp-agent/: pyproject.toml
samples/travel-agent-RAG/: agent.mermaid  main.py  pyproject.toml  uipath.json
samples/travel-helper-RAG-agent/: pyproject.toml
src/uipath_llamaindex/: middlewares.py
src/uipath_llamaindex/_cli/: cli_dev.py  cli_eval.py  cli_new.py  cli_run.py
src/uipath_llamaindex/_cli/_runtime/: _exception.py  _hitl.py  _runtime.py
src/uipath_llamaindex/_cli/_tracing/: _attribute_normalizer.py  _oteladapter.py
src/uipath_llamaindex/embeddings/: __init__.py  _openai_embeddings.py
src/uipath_llamaindex/llms/: __init__.py  _openai.py  _openai_llms.py  vertex.py
src/uipath_llamaindex/models/: events.py
src/uipath_llamaindex/runtime/: _attribute_normalizer.py  _sqlite.py  breakpoints.py  factory.py  runtime.py  schema.py  storage.py  workflow.py
testcases/quickstart-agent/: main.py  pyproject.toml
tests/cli/: test_run_simple_hitl_agent.py
