[project]
name = "llama-demo"
version = "0.0.1"
description = "UiPath LlamaIndex SDK"
authors = [{ name = "John Doe", email = "john.doe@myemail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = [
    "uipath-llamaindex>=0.0.4",
    "llama-index-llms-openai>=0.2.2"
]
